--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
   --fonte: 'Rubik', sans-serif;
   --branco: #ffffff;
   --preto: #000000;
+  --preto-medio: #262626;
   --laranja: #FF5A00;
+  --borda: #FF8B4D;
   --laranja-claro:#FFBD99;
   
 }
