--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -5,3 +5,21 @@
     margin: 1em 5em;
 }
 
+.cabecalho button {
+    width: 171px;
+    height: 55px;
+    font-size: 24px;
+    font-weight: 400;
+    background-color: var(--branco);
+    border: 2px solid var(--laranja);
+    border-radius: 8px;
+}
+
+.cabecalho button:hover {
+    background-color: var(--laranja);
+}
+
+.linha {
+    border-bottom: 2px solid var(--borda);
+    box-shadow: (0px 4px 4px rgba(128, 45, 0, 0.25));
+}
