--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,23 +1,65 @@
 .container {
-    padding: 0 0 1em 0;
-    margin-top: .5em;
-    width: 282px;
-    background-color: var(--cinza);
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 0.2em 0.5em;
 }
-
-.capa {
-    width: 100%;
-}
-
-.container h2 {
-    padding: 0 1em;
+.container img {
+    width: 250px;
 }
 
 .link {
     text-decoration: none;
     color: var(--preto);
-    text-align: left;
+}
+
+.link__fundo {
+    background-color: var(--laranja-claro);
+    border-radius: 8px;
+    width: 220px;
+    height: 130px;
+    padding: 0.1em 0;
+    margin: 0 0 0 0.8em;    
+}
+
+.link__fundo:hover {
+    background-color: var(--laranja);
+}
+
+.link__fundo h2 {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    margin: 0.5em 0;
+}
+
+.link__fundo p {
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    margin: 1em 0;
+}
+
+.link__botao {
+    display: flex;
+    justify-content: space-between;
+    padding: 0em 1em;
+    align-items: center;
+    margin: 0.4em 0;
+}
+
+.link__botao button {
+    background-color: var(--laranja-claro);
+    border: 1px solid var(--laranja);
+    border-radius: 8px;
+    width: 80px;
+    height: 23px;
+    font-size: 14px;
+}
+
+.link__botao button:hover {
+    background-color: var(--preto);
+    color: var(--branco);
+    border: none;
 }
