--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -7,6 +7,7 @@
 }
 .container img {
     width: 250px;
+    margin-bottom: 4.5em;
 }
 
 .link {
@@ -20,11 +21,14 @@
     width: 220px;
     height: 130px;
     padding: 0.1em 0;
-    margin: 0 0 0 0.8em;    
+    margin: -7em 0 0 0.8em; 
+    position: absolute;
 }
 
 .link__fundo:hover {
     background-color: var(--laranja);
+    margin-top: -9em;
+    transition: 0.2s ease;
 }
 
 .link__fundo h2 {
