--- a/src/pages/Inicio/SextoElemento/SextoElemento.module.css
+++ b/src/pages/Inicio/SextoElemento/SextoElemento.module.css
@@ -11,6 +11,7 @@
 .elemento__texto {
    padding: 2em 0 0 2em;
    color: var(--branco);
+   margin-left: 7em;
 }
 
 .elemento__texto h1 {
@@ -29,22 +30,4 @@
     margin-top: 1em;
 }
 
-.elemento__botoes button {
-    font-size: 20px;
-    font-weight: 500;
-    margin: 0 1em 0 0;
-    width: 200px;
-    height: 70px;
-    border: 2px solid #FF5A00;
-    border-radius: 8px;
-}
 
-.elemento__botoes button:hover {
-    transform: scale(1.04);
-    cursor: pointer;
-}
-
-.elemento__laranja {
-    color: var(--branco);
-    background-color: var(--laranja);
-}
